--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ apply plugin: 'groovy'
 apply plugin: 'idea'
 apply plugin:com.smokejumperit.gradle.OneJarPlugin
 
+sourceCompatibility = 1.6
+
 buildscript {
     repositories {
         mavenRepo urls:'http://repo.smokejumperit.com'
@@ -19,7 +21,7 @@ repositories {
 }
 
 dependencies {
-    groovy 'org.codehaus.groovy:groovy:1.7.5'
+    groovy 'org.codehaus.groovy:groovy:1.8.6'
     compile group: 'org.quartz-scheduler', name: 'quartz', version: '2.1.1'
     compile group: 'com.google.inject', name: 'guice', version: '3.0'
     compile group: 'com.google.guava', name: 'guava', version: '11.0.1'
@@ -27,6 +29,7 @@ dependencies {
     compile 'org.slf4j:slf4j-api:1.6.4'
     compile 'ch.qos.logback:logback-classic:1.0.0'
     compile 'com.google.http-client:google-http-client:1.6.0-beta'
+    compile 'mysql:mysql-connector-java:5.1.16'
 
     testCompile group: 'junit', name: 'junit', version: '4.10'
     testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.0'
@@ -36,3 +39,7 @@ dependencies {
 jar {
     manifest { attributes 'Main-Class': 'Main' }
 }
+
+// http://issues.gradle.org/browse/GRADLE-1190
+sourceSets.main.java.srcDirs = []
+sourceSets.main.groovy.srcDir 'src/main/java'
